--- a/hello.html
+++ b/hello.html
@@ -4,8 +4,8 @@
         <title> Hello!</title>
     </head>
     <body>
-        <h1> Welcome to my website!</h1>
-        <h2> This a second line </h2>
+        <h1 stytle="color:blue;"> Welcome to my website!</h1>
+        <h2> This is a second line </h2>
         Hello world!
     </body>
 </html>
